syntax = "proto3";
package axelarnet.v1beta1;
option go_package = "github.com/axelarnetwork/axelar-core/x/axelarnet/types";

import "gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

message GenesisState {}